--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,13 +1,29 @@
-FROM debian:buster
+FROM	alpine:3.14
 
-RUN apt-get update
-RUN apt-get -y upgrade
-RUN apt-get install -y nginx
-RUN apt-get install -y openssl
+# Update packet manager
+RUN		apk update
 
-COPY tools/nginx.conf /etc/nginx/
-COPY tools/wordpress.conf /etc/nginx/sites-enabled/
+# Install nginx and openssl
+RUN		apk add --no-cache --quiet --update nginx
+RUN		apk add --no-cache --quiet --update openssl
 
-RUN openssl req -x509 -nodes -days 30 -subj "/C=BE/ST=Belgium/L=Brussels/O=42 Network/OU=s19/CN=inception" -newkey rsa:4096 -keyout /etc/ssl/nginx-selfsigned.key -out /etc/ssl/nginx-selfsigned.crt;
+# Create directory for the certificate and key (for HTTPS)
+RUN		mkdir -p /etc/nginx/ssl
 
-CMD nginx -g "daemon off;"
+# Generate certificate and key
+RUN 	openssl req -x509 -nodes \
+	-out /etc/nginx/ssl/rvan-aud.42.fr.crt \	
+	-keyout /etc/nginx/ssl/rvan-aud.42.fr.key \
+	-subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=rvan-aud.42.fr/UID=rvan-aud"
+
+# Create directory for the nginx config files
+RUN 	mkdir -p /var/run/nginx
+
+# Copy config file on the container
+COPY	tools/nginx.conf /etc/nginx/http.d/default.conf
+
+# Expose the only port we're allowed to use in the subject
+EXPOSE	443
+
+# Start nginx in the foreground
+CMD	[ "nginx", "-g", "daemon off;" ]
