--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -1,21 +1,32 @@
-user  www-data;
-worker_processes  auto;
-error_log  /var/log/nginx/error.log error;
-pid        /var/run/nginx.pid;
+server {
+	# Definition of the domain name
+	server_name	rvan-aud.42.fr;
 
-events {
-	worker_connections  1024;
-}
+	# Listen with ssl
+	listen 443 ssl;
+	listen [::]:443 ssl;
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+	# Provide certificate and key necessary for the ssl protocol
+	ssl_certificate		/etc/nginx/ssl/rvan-aud.42.fr.crt;
+	ssl_certificate_key	/etc/nginx/ssl/rvan-aud.42.fr.key;
 
-    access_log  /var/log/nginx/access.log combined;
+	# Encryption protocols for the ssl keys
+	ssl_protocols		TLSv1.2 TLSv1.3;
 
-    sendfile        on;
+	# Where the files are located
+	root /var/www/wordpress;
+	# Files to use for the site
+	index index.php index.html;
 
-    keepalive_timeout  65;
-
-	include /etc/nginx/sites-enabled/*.conf;
+	# Fast cgi needed for nginx to translate php
+	location / {
+		location ~ \.php$ {
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+			fastcgi_pass wordpress:9000;
+			fastcgi_index index.php;
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		}
+	}
 }
