--- a/srcs/.env
+++ b/srcs/.env
@@ -1,14 +1,21 @@
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=wordpress
-MYSQL_USER=root
-MYSQL_PASSWORD=root
-DB_NAME=wordpress
-DB_USER=root
-DB_PASSWORD=root
-DB_HOST=mariadb:3306
-DB_CHARSET=utf8
-WORDPRESS_DB_PASSWORD=root
-WORDPRESS_DB_HOST=mariadb:3306
-ROOT_PW=root
-WORDPRESS_DB_PASSWORD=root
-WORDPRESS_DB_HOST=mariadb:3306
+DOMAIN_NAME=rvan-aud.42.fr
+
+MARIADB_HOST=mariadb
+MARIADB_USER=wp
+MARIADB_PWD=wp_pwd
+MARIADB_DB=wordpress
+MARIADB_ROOT_PWD=root_pwd
+
+WP_URL=https://rvan-aud.42.fr
+WP_DATABASE=wordpress
+WP_TITLE="rvan-aud's inception wordpress"
+
+# first user
+WP_ADMIN_USER=rvan-aud
+WP_ADMIN_PWD=rvan-aud_pwd
+WP_ADMIN_EMAIL=rvan-aud@student.42.fr
+
+# second user
+WP_USER=corrector
+WP_USER_PWD=corrector_pwd
+WP_USER_EMAIL=corrector@student.42.fr
